// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard duplication should fail when dashboard does not exist 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Dashboard with ID "31c90d13-1d0d-474b-a2cf-f5ab09fcbed2" not found",
  "name": "NotFoundError",
}
`;

exports[`Dashboard duplication should fail when dashboard page layout was deleted 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Dashboard with ID "8f38c048-51db-4019-97a2-09c919b193f3" not found",
  "name": "NotFoundError",
}
`;
